# movie-recommender

./: .gitignore  README.md  docker-compose.yaml  exp.ipynb  pyproject.toml
candidate-service/: Dockerfile  candidates.proto  pyproject.toml  server.py  service.py
candidate-service/test-grpc/: candidate-service.krproj  directory.krpref  readme.md
candidate-service/test-grpc/candidates/CandidateService/: GetRecommendations-request.json  GetRecommendations.krop  directory.krpref
client-service/: Dockerfile  README.md  app.js  index.html  styles.css
docs/: mvp-microservices.drawio
embedding-calc/: exp.ipynb  pyproject.toml
feature-service/: Dockerfile  db.py  embeddings.proto  pyproject.toml  redis_loader.py  server.py  service.py
feature-service/test-grpc/: directory.krpref  feature-service-grpc-test.krproj  readme.md
feature-service/test-grpc/embeddings/EmbeddingService/: AddWatchedMovie.krop  DislikeMovie-request.json  DislikeMovie.krop  GetCurrentUserEmbedding.krop  GetMovieEmbedding-request.json  GetMovieEmbedding.krop  GetMovieEmbeddingsBatch-request.json  GetMovieEmbeddingsBatch.krop  GetMovieMetadata-request.json  GetMovieMetadata.krop  GetUserEmbedding-request.json  GetUserEmbedding.krop  GetWatchedMovies-request.json  GetWatchedMovies.krop  HasWatchedMovie-request.json  HasWatchedMovie.krop  LikeMovie-request.json  LikeMovie.krop  (+8 more)
gateway-service/: Dockerfile  pyproject.toml  server.py
ranking-service/: Dockerfile  pyproject.toml  ranking.proto  server.py  service.py
ranking-service/test-grpc/: directory.krpref  ranking-service.krproj  readme.md
(+2 files in other folders)
